--- a/scss/partials/base/_tipografias.scss
+++ b/scss/partials/base/_tipografias.scss
@@ -1,3 +1,7 @@
+@use "../utilities/variables";
+
 //Fuente Inter//
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-//font-family: "Inter", sans-serif;//
+
+html { font-family: "Inter", sans-serif; }
+body { color: variables.$color-texto-base; background: #fff; }
