--- a/scss/partials/components/_footer.scss
+++ b/scss/partials/components/_footer.scss
@@ -1,45 +1,41 @@
 @use "../utilities/variables";
+@use "../utilities/mixin";
 
-.estilo-footer-jesu{
-    background-color: variables.$color-fondo-alternativo;
+
+.estilo-footer-jesu {
+  background-color: variables.$color-fondo-alternativo;
+  color: variables.$color-texto-base;
+  border-top: 1px solid variables.$color-bordes-y-lineas;
+
+  .logo-footer { max-width: 150px; }
+
+  h4 { font-size: 24px; font-weight: 600; margin-bottom: 1.2rem; }
+
+  /* enlaces */
+  .nav .nav-link {
     color: variables.$color-texto-base;
-    border-top: 1px solid variables.$color-bordes-y-lineas;
-    
-
-    .logo-footer{
-        max-width: 150px;
-    }
-    h4{
-        font-size: 24px;
-        font-weight: 600;
-        margin-bottom: 1.2rem;
-    }
-    
-    .newsletter{
-         form{
-            h4{
-
-            }
-            p{
-
-            }
-            .newsletter1{
-                .btn-estilo-jesu{
-
-                }
-            }
-         }
-
-    }
-    
+    padding: 0;              /* reemplaza p-0 */
+    &:hover { color: variables.$hover-boton-secundario; }
+  }
 }
-.boton-secundario{
-    background-color: variables.$color-boton-secundario;
-    color: #FFFF;
-    border-color: variables.$color-bordes-y-lineas ;
-    &:hover{
-        color:#FFFF ;
-        background-color: variables.$hover-boton-secundario;
-         border-color: variables.$color-bordes-y-lineas;
-    }
+
+/* franja inferior */
+.footer-bottom {
+  display: flex;
+  flex-direction: column; 
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 0;
+  margin-top: 1.5rem;
+  border-top: 1px solid variables.$color-bordes-y-lineas;
+
+  @media (min-width: 576px) { flex-direction: row; }
+
+  ul {
+    display: flex; gap: .75rem;
+    margin: 0; padding: 0; list-style: none;
+  }
+
+  a { color: inherit; text-decoration: none; }
 }
